--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -36,16 +30,17 @@
     transform: rotate(360deg);
   }
 }
-/* styles/App.css */
+
 .kanban-board {
-  background-color: #f4f6fa; /* Matches column background */
+  background-color: #f4f6fa;
   display: flex;
   flex-direction: column;
 }
-.row{
+
+.row {
   display: flex;
-  background-color: red;
 }
+
 .ticket-header {
   font-weight: bold;
   margin-bottom: 0.5rem;
@@ -55,13 +50,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
 }
 
-.ticket-priority{
+.ticket-priority {
   display: flex;
   align-items: center;
 }
+
 .ticket-status {
   display: flex;
   align-items: center;
@@ -75,8 +70,6 @@
   height: 16px;
 }
 
-
-/* General Layout */
 .kanban-board {
   display: flex;
   flex-direction: column;
@@ -86,18 +79,18 @@
 .columns {
   background-color: #f4f6fa;
   display: flex;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 4%;
+  padding-right: 4%;
   gap: 1rem;
-  overflow-x: auto; /* Allow horizontal scrolling for wide boards */
-  height: calc(100vh - 2rem); /* Account for padding or header size */
+  overflow-x: auto;
+  height: calc(100vh - 2rem);
 }
 
 .column {
   align-items: center;
-  margin-right: 40px;
-  
+  margin-right: 4%;
 }
+
 .column-header h3 {
   font-size: 1rem;
   font-weight: bold;
@@ -112,7 +105,6 @@
   padding-bottom: 20px;
 }
 
-/* Ticket Card */
 .ticket-card {
   background-color: #fff;
   padding: 1rem;
@@ -121,7 +113,6 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   width: 400px;
   height: 100px;
-
 }
 
 .ticket-header h4 {
@@ -156,7 +147,7 @@
   font-size: 0.9rem;
   color: #555;
 }
-/* Container for dropdown */
+
 .dropdown-container {
   background-color: #fff;
   border-radius: 2px;
@@ -167,9 +158,8 @@
   padding-bottom: 2px;
 }
 
-/* Dropdown button */
 .dropdown-button {
-  margin-left: 50px;
+  margin-left: 50%;
   margin-top: 10px;
   margin-bottom: 10px;
   display: flex;
@@ -190,13 +180,11 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* Icon for Display */
 .display-icon {
   width: 16px;
   height: 16px;
 }
 
-/* Dropdown arrow */
 .dropdown-button svg {
   transition: transform 0.2s ease;
 }
@@ -205,7 +193,6 @@
   transform: rotate(180deg);
 }
 
-/* Dropdown menu */
 .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -216,14 +203,11 @@
   border-radius: 4px;
   width: 300px;
   padding: 1rem;
- 
 }
 
-/* Dropdown sections */
 .dropdown-section {
   display: flex;
   margin-bottom: 1rem;
-  
 }
 
 .dropdown-section:last-child {
@@ -264,6 +248,7 @@
   margin-left: auto;
   padding-left: 0.5rem;
 }
+
 .column-label {
   font-size: 1rem;
   font-weight: bold;
@@ -271,57 +256,60 @@
   padding-bottom: 20px;
   padding-left: 10px;
 }
+
 .column-header {
   display: flex;
   justify-content: space-between;
-  align-items: center; /* Vertically centers items */
+  align-items: center;
   margin-bottom: 0.5rem;
 }
 
 .column-header-left {
   display: flex;
-  align-items: center; /* Vertically centers items */
+  align-items: center;
   gap: 0.5rem;
   margin-left: 10px;
 }
 
 .column-header-right {
   display: flex;
-  align-items: center; /* Vertically centers items */
+  align-items: center;
   gap: 0.5rem;
   margin-right: 10px;
 }
+
 .ticket-title {
-  font-size: 1rem; /* Adjust font size as needed */
+  font-size: 1rem;
   font-weight: bold;
-  margin: 0; /* Remove any default margins */
-  display: -webkit-box; /* Enables WebKit's flex-like container for text */
-  -webkit-box-orient: vertical; /* Specifies vertical orientation for text */
-  overflow: hidden; /* Hides overflowing text */
-  text-overflow: ellipsis; /* Adds '...' for truncated content */
-  -webkit-line-clamp: 2; /* Limits to a maximum of 2 lines */
+  margin: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
 }
+
 .ticket-tag {
   display: inline-block;
   padding: 0.2rem 0.5rem;
   font-weight: bold;
   font-size: 0.8rem;
   border-width: 0.2px;
-  border-style: solid; /* Add this */
+  border-style: solid;
   border-radius: 4px;
   border-color: #94989f;
-  
 }
 
 .priority-icon-detail {
   display: inline-block;
   padding: 0.2rem 0.2rem;
-  border-width: 0.2px; /* Adjust to your desired width */
-  border-style: solid; /* Add this */
+  border-width: 0.2px;
+  border-style: solid;
   border-radius: 4px;
   border-color: #94989f;
   text-transform: uppercase;
 }
+
 .ticket-id {
   display: block;
   font-size: 0.8rem;
@@ -329,8 +317,3 @@
   color: #666;
   margin-bottom: 0.3rem;
 }
-
-
-
-
-
